KeePassDroid (0.1.3)

  * Hide Meta-Info entries
  * Change "Copy URL" to "Go to URL"
  * Support "Go to Homepage"
  * Support Lock menu option

KeePassDroid (0.1.2)

  * Fix crash when accessing the first root level group.

KeePassDroid (0.1.1)

  * Minor tweaks to layout.

KeePassdroid (0.0.1)

  * Initial Release