@@ -4,6 +4,7 @@ KeePassDroid (0.1.3)
   * Change "Copy URL" to "Go to URL"
   * Support "Go to Homepage"
   * Support Lock menu option
+  * Fix blank password crash
 
 KeePassDroid (0.1.2)
 
